# web_chat_rooms

./: README.md
backend/backend/: .env  pyproject.toml
backend/backend/pr8/: manage.py
backend/backend/pr8/api/: urls.py
backend/backend/pr8/api/v1/: urls.py
backend/backend/pr8/api/v1/chat/: serializers.py  urls.py  views.py
backend/backend/pr8/api/v1/firebase_notifications/: serializers.py  urls.py  views.py
backend/backend/pr8/api/v1/products/: serializers.py  urls.py  views.py
backend/backend/pr8/apps/chat/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
backend/backend/pr8/apps/chat/migrations/: 0001_initial.py  0002_alter_chatroom_options.py
backend/backend/pr8/apps/chat/templates/chat/: room.html
backend/backend/pr8/apps/firebase_notifications/: admin.py  apps.py  models.py
backend/backend/pr8/apps/firebase_notifications/migrations/: 0001_initial.py  0002_alter_notificationtoken_token.py
backend/backend/pr8/apps/firebase_notifications/services/: firebase_notifier.py
backend/backend/pr8/apps/products/: admin.py  apps.py  models.py  urls.py  views.py
backend/backend/pr8/apps/products/migrations/: 0001_initial.py
backend/backend/pr8/apps/products/static/products/css/: basket.css  list.css
backend/backend/pr8/apps/products/static/products/js/: product_basket.js
backend/backend/pr8/apps/products/templates/products/: basket.html  list.html
backend/backend/pr8/pr8/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/pr8/static/common/css/: base.css
backend/backend/pr8/templates/common/: base.html
(+165 files in other folders)
